[gd_scene load_steps=19 format=2]

[ext_resource path="res://Inimigos/towerDefense_tile251.png" type="Texture" id=1]
[ext_resource path="res://Scripts/missel_teleguiado.gd" type="Script" id=2]
[ext_resource path="res://scenes/fumaca.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/destrutivos.gd" type="Script" id=4]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=8]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=9]
[ext_resource path="res://SFX/barrel_explosion.wav" type="AudioStream" id=10]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.0555556, 0.533333, 0.911111 )
colors = PoolColorArray( 1, 1, 1, 1, 0.988281, 0.829881, 0.208466, 1, 1, 0.3172, 0.226563, 1, 1, 0.339996, 0.0507813, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.365031 ), -2.97587, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
angular_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=6]
height = 6.10316

[sub_resource type="CapsuleShape2D" id=7]
radius = 12.3044
height = 15.0339

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ null, ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 8 ), null ],
"loop": false,
"name": "explosao",
"speed": 20.0
} ]

[node name="missel_teleguiado" type="Area2D"]
z_index = 100
collision_layer = 16
collision_mask = 33
script = ExtResource( 2 )

[node name="misseis" type="Node2D" parent="."]

[node name="missel1" type="Sprite" parent="misseis"]
position = Vector2( 0, 6.71751 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="missel2" type="Sprite" parent="misseis"]
position = Vector2( 0, -7.42461 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="fumaca" parent="." instance=ExtResource( 3 )]
position = Vector2( -25.136, -7.20962 )
lifetime = 2.0

[node name="fumaca2" parent="." instance=ExtResource( 3 )]
position = Vector2( -25.136, 7.99316 )
lifetime = 2.0

[node name="fogo" type="Particles2D" parent="."]
position = Vector2( -20.0013, -7.08706 )
rotation = -3.14159
amount = 32
lifetime = 0.6
local_coords = false
process_material = SubResource( 5 )

[node name="fogo2" type="Particles2D" parent="."]
position = Vector2( -20.1587, 6.77208 )
rotation = -3.14159
amount = 32
lifetime = 0.6
local_coords = false
process_material = SubResource( 5 )

[node name="coll" type="CollisionShape2D" parent="."]
position = Vector2( 7.71702, 0.15749 )
shape = SubResource( 6 )

[node name="area_dano_de_si" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 4 )
vida = 10

[node name="colli" type="CollisionShape2D" parent="area_dano_de_si"]
position = Vector2( -1.25993, -3.8147e-06 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="anim" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "explosao"

[node name="som_explosao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 0.53

[connection signal="area_entered" from="." to="." method="_on_missel_teleguiado_area_entered"]
[connection signal="destruido" from="area_dano_de_si" to="." method="_on_area_dano_destruido"]
